# Algorithm_Learning

./: README.md  format_code.py  format_cpp.py  hw.cpp
Acwing/: Fibonacci.cpp  Fun_Fibonacci.cpp  Game_time.cpp  Game_time2.cpp  PUM.cpp  Salary&bonuses.cpp  Single_linked_lists.cpp  Square_matrix.cpp  Square_matrix_1.cpp  Square_matrix_2.cpp  Square_matrix_3.cpp  alter_str.cpp  arrange.cpp  bubble_sort.cpp  cash.cpp  factorial.cpp  longestsubstr.cpp  merge_sort.cpp  once_str.cpp  quick_sort.cpp  time_trans.cpp  word_replacement.cpp
Data_Structures_and_Algorithms/: Linked_List.c  campus_guide_system.cpp  deleteMinAndReplace.cpp  huffman_coding.cpp  polynomial.cpp
Funny_code/: Inline_Function.cpp  Linked_List.c  MoMo_code.cpp  Pointer.cpp  book_shop.cpp  circle.cpp  class.cpp  clazz.cpp  find_the_largest.cpp  find_the_max.cpp  hello.cpp  pointer.c  pointer_struct.cpp  relationship.cpp  structs.c  test_system.c  vector.cpp
Funny_code/Battle_City/: CMakeLists.txt
Funny_code/Battle_City/include/: Game.h  Map.h  Projectile.h  Tank.h  Utils.h
Funny_code/Battle_City/src/: Game.cpp  Map.cpp  Projectile.cpp  Tank.cpp  Utils.cpp
LeetCode/: Delete_the_last_element.cpp  addTwoNumbers.cpp  convert.cpp  findMedianSortedArrays.cpp  isPalindrome.cpp  isValid.cpp  lengthOfLongestSubstring.cpp  longestCommonPrefix.cpp  longestPalindrome.cpp  (+7 more)
Student_Management/: CMakeLists.txt
Student_Management/include/: UserInterface.h  student.h  student_management_system.h
Student_Management/src/: UserInterface.cpp  main.cpp  menu.cpp  student.cpp  student_management_system.cpp
(+804 files in other folders)
